--- a/web/web.html
+++ b/web/web.html
@@ -1,9 +1,35 @@
 <head>
-  <title>web</title>
+  <title>Project Lilo</title>
 </head>
-
-<body>
-  <h1>Welcome to Meteor!</h1>
+<body role="document">
+<div class="container theme-showcase text-center" role="main">
+	<div class="jumbotron">
+	  <h1>Project Lilo</h1>
+	</div>
+	<div class="page-header">
+    <h1>Commands</h1>
+  </div>
+  <p>
+      <button type="button" class="btn btn-lg btn-primary">Left</button>
+      <button type="button" class="btn btn-lg btn-success">Forward</button>
+      <button type="button" class="btn btn-lg btn-info">Back</button>
+      <button type="button" class="btn btn-lg btn-warning">Right</button>
+      <button type="button" class="btn btn-lg btn-danger">Stop</button>
+   </p>
+ 	 <div class="page-header">
+     <h1>History</h1>
+   </div>
+   <p>
+		  <ul class="list-group">
+		    <li class="list-group-item">Pictures</li>
+		    <li class="list-group-item">Documents</li>        
+		    <li class="list-group-item">Music</li>
+		    <li class="list-group-item">Videos</li>
+		  </ul>
+   </p>
+</div>
+</body>
+<!--   <h1>Welcome to Meteor!</h1>
 
   {{> hello}}
 </body>
@@ -12,3 +38,4 @@
   <button>Click Me</button>
   <p>You've pressed the button {{counter}} times.</p>
 </template>
+ -->
