--- a/web/web.html
+++ b/web/web.html
@@ -6,36 +6,34 @@
 	<div class="jumbotron">
 	  <h1>Project Lilo</h1>
 	</div>
-	<div class="page-header">
-    <h1>Commands</h1>
-  </div>
-  <p>
-      <button type="button" class="btn btn-lg btn-primary">Left</button>
-      <button type="button" class="btn btn-lg btn-success">Forward</button>
-      <button type="button" class="btn btn-lg btn-info">Back</button>
-      <button type="button" class="btn btn-lg btn-warning">Right</button>
-      <button type="button" class="btn btn-lg btn-danger">Stop</button>
-   </p>
- 	 <div class="page-header">
-     <h1>History</h1>
-   </div>
-   <p>
-		  <ul class="list-group">
-		    <li class="list-group-item">Pictures</li>
-		    <li class="list-group-item">Documents</li>        
-		    <li class="list-group-item">Music</li>
-		    <li class="list-group-item">Videos</li>
-		  </ul>
-   </p>
+	{{> controls}}
+
+	{{> facts}}
 </div>
 </body>
-<!--   <h1>Welcome to Meteor!</h1>
 
-  {{> hello}}
-</body>
-
-<template name="hello">
-  <button>Click Me</button>
-  <p>You've pressed the button {{counter}} times.</p>
+<template name="controls">
+	<div class="page-header">
+    <h1>Controls</h1>
+  </div>
+  <p>
+    <button type="button" id="f" class="btn btn-lg btn-primary">Forward</button>
+    <button type="button" id="b" class="btn btn-lg btn-success">Back</button>
+    <button type="button" id="l" class="btn btn-lg btn-info">Left</button>
+    <button type="button" id="r" class="btn btn-lg btn-warning">Right</button>
+    <button type="button" id="s" class="btn btn-lg btn-danger">Stop</button>
+   </p>
 </template>
- -->
+
+<template name="facts">
+<div class="page-header">
+  <h1>History</h1>
+</div>
+<p>
+  <ul class="list-group">
+    {{#each facts}}
+      <li class="list-group-item">{{text}}</li>
+    {{/each}}
+  </ul>
+</p>
+</template>
